src/objects/MUSW__Review__c.object
<CustomObject>
    <description>Tracks the collaborative plan review process and associated documents</description>
    <fields>
        <fullName>Actual_Completion_Time_Hours__c</fullName>
        <description>Actual Time taken computed based on start time and end time from ReviewTrigger</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Completion Time (Hours)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information_Required__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Information Required</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_Licensee_Name__c</fullName>
        <formula>IF(License__c != NULL,  HYPERLINK(&apos;/lightning/r/Contact/&apos;&amp; License__r.MUSW__Applicant__r.Id &amp;&apos;/view&apos;, License__r.Applicant_Full_Name__c),

IF(License__c = NULL &amp;&amp; Renewal_Application__c != NULL,  HYPERLINK(&apos;/lightning/r/Contact/&apos;&amp;Renewal_Application__r.Applicant__r.Id&amp;&apos;/view&apos;, Renewal_Application__r.License__r.Applicant_Full_Name__c),

IF(Endorsement__c != NULL ,  HYPERLINK(&apos;/lightning/r/Contact/&apos;&amp; Endorsement__r.License__r.MUSW__Applicant__r.Id&amp;&apos;/view&apos;,Endorsement__r.License__r.Applicant_Full_Name__c ), 

HYPERLINK(&apos;/lightning/r/Contact/&apos;&amp;Request__r.Contact__r.Id&amp;&apos;/view&apos;, Request__r.Contact__r.Full_Name__c))))</formula>
        <label>Applicant/Licensee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_at_least_18_years_of_age__c</fullName>
        <label>Applicant at least 18 years of age?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Complete_and_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Complete and Signed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_License_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application/License Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Application Type</description>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appraiser_Specific_Qualifying_Education__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Appraiser Specific Qualifying Education</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_to_take_Exam_Letter_Emailed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval to take Exam Letter Emailed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_to_take_Exam_letter_Returned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval to take Exam letter Returned –</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_reports_request_letter_emai__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignment (reports request) letter emai</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associate_of_Arts_Degree_in_Mortuary_Sci__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associate of Arts Degree in Mortuary Sci</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Audit Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BREAK_SUPERVISOR_RELATIONSHIP_S__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BREAK SUPERVISOR RELATIONSHIP(S)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bond_executed_in_the_name_of_the_State__c</fullName>
        <label>Bond executed in the name of the State?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bond_is_between_5_000_and_25_000__c</fullName>
        <description>Met
Not Met
N/A</description>
        <label>Bond is between $5,000 and $25,000</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bond_issued_by_WI_authorized_company__c</fullName>
        <label>Bond issued by WI authorized company?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Representative__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Representative</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COLLEGE_Hi_lite_items_on_attached_list__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COLLEGE (Hi-lite items on attached list)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_of_Insurance_or_Bond__c</fullName>
        <label>Certificate of Insurance or Bond?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checklist_type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Checklist type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_2_year_intern_training_program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed 2 year intern training program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Approved_Training_Course__c</fullName>
        <label>Completed Approved Training Course?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_Course_Details_Entered__c</fullName>
        <label>Completed Course Details Entered?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_a_course_of_instruction_at_an__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed a course of instruction at an</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Provided__c</fullName>
        <label>Contact Person Provided?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Course Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_License_Certification__c</fullName>
        <label>Current License/Certification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSPS_is_Certificate_Holder__c</fullName>
        <label>DSPS is Certificate Holder?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department_of_Revenue_Hold__c</fullName>
        <label>Department of Revenue Hold?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department_of_Revenue_Hold_and_Approved__c</fullName>
        <label>Department of Revenue Hold and Approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>yes</fullName>
                    <isActive>false</isActive>
                    <label>yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Designer_Architect_Credential_Status__c</fullName>
        <label>Designer/Architect Credential Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Endorsement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Endorsement</label>
        <referenceTo>Endorsement__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Time_Hours__c</fullName>
        <label>Estimated Completion Time(Hours)</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exam_Pass_Letter_Received__c</fullName>
        <label>Exam Pass Letter Received?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exam_Result__c</fullName>
        <label>Exam Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Ungraded</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Met</fullName>
                    <isActive>false</isActive>
                    <label>Met</label>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                    <isActive>false</isActive>
                    <label>Not Met</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exam_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exam Scheduled</description>
        <label>Exam Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exam_assigned_excel_sheet_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exam # assigned (excel sheet) &amp; approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exp_in_other_States_Verify_in_good_st__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exp. in other States? (Verify in good st</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience_Hours_Total_Full_Months__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Experience Hours:  Total Full Months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Experience_Hrs_Res_Non_Res__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Experience Hrs: Res:________ Non Res:___</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Experience_Log_Submitted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Experience Log Submitted</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_of_Insurance_Policy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date of Insurance Policy</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_of_Insurance_Policy_or_Bond__c</fullName>
        <label>Expiration of Insurance Policy or Bond?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_validated_license_issued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee validated &amp; license issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Felony_Review__c</fullName>
        <label>Felony Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_at_least_5_years_of_active_licensed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has at least 5 years of active licensed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurance Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Policy_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurance Policy Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Record_Type__c</fullName>
        <formula>IF(License__r.RecordType.DeveloperName == &apos;Universal_Default_License_Record_Type&apos;, &apos;Individual&apos;, License__r.RecordType.DeveloperName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Application2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Completed_DateTime__c</fullName>
        <description>The date and time when review was completed.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>When Review was completed</inlineHelpText>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MUSW__Due_Date__c</fullName>
        <description>Due date for completion of the review.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>MUSW__Milestone__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Permit2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Project2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MUSW__Project2__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Related_To__c</fullName>
        <formula>HYPERLINK( &quot;../&quot; &amp; MUSW__Permit2__c + MUSW__Application2__c + MUSW__Project2__c, MUSW__Permit2__r.Name + MUSW__Application2__r.Name + MUSW__Project2__r.Name, &quot;_parent&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Status__c</fullName>
        <description>Current status of the review.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved with Conditions</fullName>
                </value>
                <value>
                    <fullName>Corrections Required</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Exam Approved</fullName>
                </value>
                <value>
                    <fullName>In-Review</fullName>
                </value>
                <value>
                    <fullName>Audit Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated submission record(s).</description>
        <label>Submission</label>
        <referenceTo>MUSW__Submission__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <description>Deprecated.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__isApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true when the review is approved.</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marked_Exp_Log_file_with_Approved_4_Ex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marked Exp. Log file with “Approved 4 Ex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Miliatary__c</fullName>
        <formula>License__r.Military__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Military</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Military_Spouse__c</fullName>
        <formula>License__r.Military_Spouse__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Military Spouse/Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NOTE_PROBLEMS_THE_EFFORTS_MADE_TO_RESO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NOTE PROBLEMS &amp; THE EFFORTS MADE TO RESO</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>New_Label__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Label</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passed_Embalmer_Sciences_Exam__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed Embalmer Sciences Exam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passed_Exam_Notice_received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed Exam Notice received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passed_Legal_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed Legal History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passed_State_LRR_Exam__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed State LRR Exam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passed_the_National_Board_Exam_with_a_sc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed the National Board Exam with a sc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Review__c</fullName>
        <label>Plan Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Conditionally Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_or_Current_Ordinance__c</fullName>
        <label>Proposed or Current Ordinance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Application</label>
        <referenceTo>Renewal_Application__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Appraisal_Reports_received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requested Appraisal Reports received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_License_Type__c</fullName>
        <formula>TEXT(License_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_SubStatus__c</fullName>
        <label>Review Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MUSW__Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FE Approved</fullName>
                </value>
                <value>
                    <fullName>PE Approved</fullName>
                </value>
                <value>
                    <fullName>PE/FE Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>